tests/variants/ill-typed/unexpected-variable-label-2.stella
language core;
extend with #variants;

fn g(x : <| number : Nat, boolean : Bool, function : fn(Nat) -> Nat |>) -> Nat {
  return match x {
      <| number   = n |> => succ(n)
    | <| boolean = x |> => succ(succ(0))
    | <| function = f |> => f(f(succ(0)))
  }
}

fn main(x : Nat) -> Nat {
  return g(<| function = fn(n : Nat) { return g(<| number1 = n |>) } |>)
}
